[package]
name = "events"
version = "0.0.0"
authors = ["woksin <sindrewilting@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artifacts = { path = "../artifacts" }
chrono = "0.4.19"
execution = { path = "../execution" }
rudimentary = { path = "../rudimentary" }
rudimentary-derive = { path = "../rudimentary-derive" }
snafu = "0.6.10"
uuid = { version = "0.8.2", features = ["serde", "v4"]  }
