[package]
name = "rudimentary-derive"
version = "0.0.0"
authors = ["woksin <sindrewilting@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = "1.0.62"
rudimentary = { path = "../rudimentary" }
